--- a/about.html
+++ b/about.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About - Constructo Bootstrap Template</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>L’entreprise - PARIS DECOR</title>
+  <meta name="description" content="PARIS DECOR — entreprise de rénovation (peinture, vitrerie, carrelage, parquet) en Île-de-France. Finitions soignées, devis rapides.">
+  <meta name="keywords" content="PARIS DECOR, rénovation, peinture, vitrerie, carrelage, parquet, Île-de-France">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="icon" href="assets/img/favicon.ico" sizes="any">
+  <link rel="icon" type="image/png" href="assets/img/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="assets/img/favicon-16x16.png" sizes="16x16">
+  <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png" sizes="180x180">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Lato:wght@300;400;700;900&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -26,14 +28,6 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Constructo
-  * Template URL: https://bootstrapmade.com/constructo-bootstrap-construction-template/
-  * Updated: Aug 30 2025 with Bootstrap v5.3.8
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="about-page">
@@ -43,8 +37,8 @@
     <div class="topbar d-flex align-items-center dark-background">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">contact@example.com</a></i>
-          <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
+          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:parisdecor.contact@gmail.com">parisdecor.contact@gmail.com</a></i>
+          <i class="bi bi-phone d-flex align-items-center ms-4"><span>06 99 85 80 05</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
           <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
@@ -59,45 +53,16 @@
 
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
-          <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.webp" alt=""> -->
-          <h1 class="sitename">Constructo</h1>
+          <h1 class="sitename">PARIS DECOR</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html" class="active">About</a></li>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="about.html" class="active">L’entreprise</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="team.html">Team</a></li>
-            <li class="dropdown"><a href="#"><span>More Pages</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-              <ul>
-                <li><a href="service-details.html">Service Details</a></li>
-                <li><a href="project-details.html">Project Details</a></li>
-                <li><a href="quote.html">Quote Form</a></li>
-                <li><a href="terms.html">Terms</a></li>
-                <li><a href="privacy.html">Privacy</a></li>
-                <li><a href="404.html">404</a></li>
-              </ul>
-            </li>
-            <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-              <ul>
-                <li><a href="#">Dropdown 1</a></li>
-                <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                  <ul>
-                    <li><a href="#">Deep Dropdown 1</a></li>
-                    <li><a href="#">Deep Dropdown 2</a></li>
-                    <li><a href="#">Deep Dropdown 3</a></li>
-                    <li><a href="#">Deep Dropdown 4</a></li>
-                    <li><a href="#">Deep Dropdown 5</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Dropdown 2</a></li>
-                <li><a href="#">Dropdown 3</a></li>
-                <li><a href="#">Dropdown 4</a></li>
-              </ul>
-            </li>
+            <li><a href="projects.html">Réalisations</a></li>            
             <li><a href="contact.html">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -114,11 +79,11 @@
     <!-- Page Title -->
     <div class="page-title light-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">About</h1>
+        <h1 class="mb-2 mb-lg-0">L’entreprise</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">About</li>
+            <li><a href="index.html">Accueil</a></li>
+            <li class="current">L’entreprise</li>
           </ol>
         </nav>
       </div>
@@ -132,67 +97,67 @@
         <div class="row align-items-center g-5">
           <div class="col-lg-6">
             <div class="about-content" data-aos="fade-right" data-aos-delay="200">
-              <h2>Building Excellence Since 1995</h2>
-              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin gravida tortor in magna feugiat, quis faucibus libero commodo. Maecenas semper lacus vel leo ultrices, vel tempus lectus varius.</p>
-              <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla facilisi. Duis cursus nisi eu orci laoreet, vel molestie enim ullamcorper. Phasellus at convallis neque, id vehicula magna.</p>
+              <h2>PARIS DECOR, la rénovation soignée en Île-de-France</h2>
+              <p class="lead">Entreprise à taille humaine basée à Épinay-sur-Seine, nous intervenons sur tout le second œuvre : <strong>peinture</strong>, <strong>vitrerie</strong>, <strong>carrelage</strong>, <strong>parquet</strong>, <strong>cloisons & isolation</strong>. Notre exigence : des supports parfaitement préparés et des finitions durables.</p>
+              <p>Nous accompagnons particuliers, pros et syndics de copropriété avec des devis clairs, un planning tenu et un chantier propre. Matériaux certifiés A+ (faibles émissions de COV) et conseils techniques selon vos pièces, usages et budgets.</p>
 
               <div class="achievement-boxes row g-4 mt-4">
                 <div class="col-6 col-md-3" data-aos="fade-up" data-aos-delay="300">
                   <div class="achievement-box">
-                    <h3>25+</h3>
-                    <p>Years Experience</p>
+                    <h3>15+</h3>
+                    <p>années d’expérience</p>
                   </div>
                 </div>
                 <div class="col-6 col-md-3" data-aos="fade-up" data-aos-delay="400">
                   <div class="achievement-box">
-                    <h3>500+</h3>
-                    <p>Projects Completed</p>
+                    <h3>350+</h3>
+                    <p>chantiers livrés</p>
                   </div>
                 </div>
                 <div class="col-6 col-md-3" data-aos="fade-up" data-aos-delay="500">
                   <div class="achievement-box">
-                    <h3>100%</h3>
-                    <p>Client Satisfaction</p>
+                    <h3>4.9/5</h3>
+                    <p>avis clients</p>
                   </div>
                 </div>
                 <div class="col-6 col-md-3" data-aos="fade-up" data-aos-delay="600">
                   <div class="achievement-box">
-                    <h3>48</h3>
-                    <p>Team Members</p>
+                    <h3>100%</h3>
+                    <p>engagés sécurité</p>
                   </div>
                 </div>
               </div>
 
               <div class="certifications mt-5" data-aos="fade-up" data-aos-delay="700">
-                <h5>Certifications &amp; Partnerships</h5>
+                <h5>Engagements &amp; garanties</h5>
                 <div class="row g-3 align-items-center">
                   <div class="col-4 col-md-3">
-                    <img src="assets/img/construction/badge-4.webp" alt="Certification" class="img-fluid">
+                    <img src="assets/img/construction/badge-4.webp" alt="Assurance & responsabilité civile" class="img-fluid">
                   </div>
                   <div class="col-4 col-md-3">
-                    <img src="assets/img/construction/badge-3.webp" alt="Certification" class="img-fluid">
+                    <img src="assets/img/construction/badge-3.webp" alt="Qualité matériaux A+" class="img-fluid">
                   </div>
                   <div class="col-4 col-md-3">
-                    <img src="assets/img/construction/badge-5.webp" alt="Certification" class="img-fluid">
+                    <img src="assets/img/construction/badge-5.webp" alt="Respect des délais & sécurité" class="img-fluid">
                   </div>
                 </div>
               </div>
 
               <div class="cta-container mt-5" data-aos="fade-up" data-aos-delay="800">
-                <a href="about.html" class="btn btn-primary">Learn More About Us</a>
+                <a href="quote.html" class="btn btn-primary">Demander un devis</a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-6">
             <div class="about-image position-relative" data-aos="fade-left" data-aos-delay="200">
-              <img src="assets/img/construction/project-3.webp" alt="Construction Team" class="img-fluid main-image rounded">
+              <img src="assets/img/construction/project-3.webp" alt="Équipe PARIS DECOR sur chantier" class="img-fluid main-image rounded">
               <div class="image-overlay">
-                <img src="assets/img/construction/project-7.webp" alt="Construction Project" class="img-fluid rounded">
+                <img src="assets/img/construction/project-7.webp" alt="Finitions peinture & carrelage" class="img-fluid rounded">
               </div>
               <div class="experience-badge" data-aos="zoom-in" data-aos-delay="500">
-                <span>25+</span>
-                <p>Years of Experience</p>
+                <span>ÎdF</span>
+                <p>Intervention rapide</p>
               </div>
             </div>
           </div>
@@ -210,59 +175,55 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">MyWebsite</span>
+            <span class="sitename">PARIS DECOR</span>
           </a>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+          <p>Entreprise de rénovation à taille humaine spécialisée en peinture, vitrerie, carrelage et parquet. Nous intervenons sur toute l’Île-de-France pour des finitions durables et soignées.</p>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="#"><i class="bi bi-twitter-x"></i></a>
+            <a href="#"><i class="bi bi-facebook"></i></a>
+            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="#"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
-          <h4>Useful Links</h4>
+          <h4>Liens utiles</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="about.html">L’entreprise</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="terms.html">Mentions légales</a></li>
+            <li><a href="privacy.html">Politique de confidentialité</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
-          <h4>Our Services</h4>
+          <h4>Nos métiers</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
+            <li><a href="services.html#services">Peinture</a></li>
+            <li><a href="services.html#services">Vitrerie</a></li>
+            <li><a href="services.html#services">Carrelage</a></li>
+            <li><a href="services.html#services">Parquet</a></li>
+            <li><a href="services.html#services">Cloisons &amp; isolation</a></li>
           </ul>
         </div>
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-          <h4>Contact Us</h4>
-          <p>A108 Adam Street</p>
-          <p>New York, NY 535022</p>
-          <p>United States</p>
-          <p class="mt-4"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-          <p><strong>Email:</strong> <span>info@example.com</span></p>
+          <h4>Nous contacter</h4>
+          <p>33 Rue de la Justice</p>
+          <p>93800 Épinay-sur-Seine</p>
+          <p>France</p>
+          <p class="mt-4"><strong>Téléphone :</strong> <span>+33 6 99 85 80 05</span></p>
+          <p><strong>Email :</strong> <span>parisdecor.contact@gmail.com</span></p>
         </div>
 
       </div>
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Constructo</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">PARIS DECOR</strong> <span>Tous droits réservés</span></p>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        By  <a href="https://akamimehdi.netlify.app/">AKAMI</a>
       </div>
     </div>
 
@@ -276,7 +237,6 @@
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -285,5 +245,4 @@
   <script src="assets/js/main.js"></script>
 
 </body>
-
 </html>
