--- a/service-details.html
+++ b/service-details.html
@@ -15,7 +15,9 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +45,8 @@
     <div class="topbar d-flex align-items-center dark-background">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">contact@example.com</a></i>
+          <i class="bi bi-envelope d-flex align-items-center"><a
+              href="mailto:contact@example.com">contact@example.com</a></i>
           <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
@@ -71,9 +74,10 @@
             <li><a href="services.html">Services</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="team.html">Team</a></li>
-            <li class="dropdown"><a href="#"><span>More Pages</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <li class="dropdown"><a href="#"><span>More Pages</span> <i
+                  class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
-                <li><a href="service-details.html" class="active">Service Details</a></li>
+                <li><a href="quote.html" class="active">Service Details</a></li>
                 <li><a href="project-details.html">Project Details</a></li>
                 <li><a href="quote.html">Quote Form</a></li>
                 <li><a href="terms.html">Terms</a></li>
@@ -81,10 +85,12 @@
                 <li><a href="404.html">404</a></li>
               </ul>
             </li>
-            <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <li class="dropdown"><a href="#"><span>Dropdown</span> <i
+                  class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="#">Dropdown 1</a></li>
-                <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i
+                      class="bi bi-chevron-down toggle-dropdown"></i></a>
                   <ul>
                     <li><a href="#">Deep Dropdown 1</a></li>
                     <li><a href="#">Deep Dropdown 2</a></li>
@@ -175,7 +181,8 @@
 
               <div class="contact-action-card">
                 <h4>Ready to Start?</h4>
-                <p class="contact-text">Mauris blandit aliquet elit eget tincidunt nibh pulvinar a proin gravida hendrerit.</p>
+                <p class="contact-text">Mauris blandit aliquet elit eget tincidunt nibh pulvinar a proin gravida
+                  hendrerit.</p>
                 <div class="contact-methods">
                   <a href="tel:+15551234567" class="contact-btn">
                     <i class="bi bi-telephone-fill"></i>
@@ -196,7 +203,8 @@
             <div class="service-main-content">
 
               <div class="hero-section" data-aos="zoom-in" data-aos-delay="150">
-                <img src="assets/img/construction/project-5.webp" alt="Commercial Construction Services" class="img-fluid">
+                <img src="assets/img/construction/project-5.webp" alt="Commercial Construction Services"
+                  class="img-fluid">
                 <div class="hero-overlay">
                   <div class="hero-badge">
                     <i class="bi bi-award"></i>
@@ -208,8 +216,13 @@
               <div class="content-section" data-aos="fade-up" data-aos-delay="200">
                 <h1>Professional Commercial Construction Services</h1>
                 <div class="content-intro">
-                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
-                  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</p>
+                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+                    totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+                    dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                  </p>
+                  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                    est laborum. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                    voluptatum deleniti atque corrupti quos dolores.</p>
                 </div>
               </div>
 
@@ -264,7 +277,8 @@
                     </div>
                     <div class="timeline-content">
                       <h4>Planning &amp; Design</h4>
-                      <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                      <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
                       <ul class="phase-features">
                         <li>Site analysis and assessment</li>
                         <li>Architectural drawings</li>
@@ -279,7 +293,8 @@
                     </div>
                     <div class="timeline-content">
                       <h4>Foundation &amp; Structure</h4>
-                      <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias.</p>
+                      <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                        voluptatum deleniti atque corrupti quos dolores et quas molestias.</p>
                       <ul class="phase-features">
                         <li>Site preparation and excavation</li>
                         <li>Foundation construction</li>
@@ -294,7 +309,8 @@
                     </div>
                     <div class="timeline-content">
                       <h4>Construction &amp; Installation</h4>
-                      <p>Et harum quidem rerum facilis est et expedita distinctio nam libero tempore cum soluta nobis est eligendi optio cumque nihil impedit quo minus.</p>
+                      <p>Et harum quidem rerum facilis est et expedita distinctio nam libero tempore cum soluta nobis
+                        est eligendi optio cumque nihil impedit quo minus.</p>
                       <ul class="phase-features">
                         <li>Mechanical and electrical systems</li>
                         <li>Interior and exterior finishing</li>
@@ -309,7 +325,8 @@
                     </div>
                     <div class="timeline-content">
                       <h4>Completion &amp; Handover</h4>
-                      <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
+                      <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et
+                        voluptates repudiandae sint et molestiae non recusandae.</p>
                       <ul class="phase-features">
                         <li>Final inspections and testing</li>
                         <li>Documentation and warranties</li>
@@ -333,7 +350,8 @@
             <div class="col-lg-6">
               <div class="project-showcase-item">
                 <div class="project-image">
-                  <img src="assets/img/construction/project-6.webp" alt="Office Building Construction" class="img-fluid">
+                  <img src="assets/img/construction/project-6.webp" alt="Office Building Construction"
+                    class="img-fluid">
                   <div class="project-overlay">
                     <div class="project-info">
                       <h4>Downtown Office Complex</h4>
@@ -351,7 +369,8 @@
                 <div class="col-12">
                   <div class="project-showcase-item">
                     <div class="project-image">
-                      <img src="assets/img/construction/project-7.webp" alt="Retail Space Construction" class="img-fluid">
+                      <img src="assets/img/construction/project-7.webp" alt="Retail Space Construction"
+                        class="img-fluid">
                       <div class="project-overlay">
                         <div class="project-info">
                           <h4>Shopping Center Renovation</h4>
@@ -399,7 +418,8 @@
           <a href="index.html" class="logo d-flex align-items-center">
             <span class="sitename">MyWebsite</span>
           </a>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+          <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta
+            donna mare fermentum iaculis eu non diam phasellus.</p>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
@@ -456,7 +476,8 @@
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
