Mise à jour de la description dans index.html pour inclure des détails

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>PARIS DECOR | Peinture, Vitrerie, Carrelage & Parquet – Île-de-France</title>
   <meta name="description"
-    content="PARIS DECOR : entreprise de rénovation située à Épinay-sur-Seine. Peinture intérieure/extérieur, vitrerie, carrelage, pose de parquet, petites maçonneries et rénovation complète. Devis gratuit sous 24h.">
+    content="PARIS DECOR : entreprise de rénovation située à Épinay-sur-Seine. Peinture intérieure/extérieur, vitrerie, carrelage, pose de parquet, charpente et ossature bois, petites maçonneries et rénovation complète. Devis gratuit sous 24h.">
   <meta name="keywords"
     content="PARIS DECOR, peinture, vitrerie, carrelage, parquet, rénovation, Épinay-sur-Seine, 43.34Z, entreprise de bâtiment, Île-de-France">
 <!-- Open Graph (pour WhatsApp, Facebook, etc.) -->
