Mise à jour des informations des auteurs dans index.html

--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
                     <div class="author-details">
                       <h4>Karim A.</h4>
                       <span class="role">Gérant de boutique</span>
-                      <span class="company">Enghien-les-Bains</span>
+                      <span class="company">Montreuil</span>
                     </div>
                   </div>
                 </div>
@@ -726,7 +726,7 @@
                   <div class="author-info">
                     <img src="assets/img/person/person-f-11.webp" alt="Auteur" class="author-avatar">
                     <div class="author-details">
-                      <h4>Syndic Avenir</h4>
+                      <h4>Sophie L</h4>
                       <span class="role">Gestionnaire</span>
                       <span class="company">Paris</span>
                     </div>
